# ogre3d-cloth-simulation

./: .gitignore  CMakeLists.txt  README.md
media/: my.material  resources.cfg
src/: main.cpp
src/app/: App.cpp  App.h  CamGuy.cpp
src/drawing/: Line3D.cpp  Line3D.h  PhysSphere.cpp  PhysSphere.h  Point3D.cpp  Point3D.h
src/physics/: Cloth.cpp  Cloth.h  LinearSpring.cpp  LinearSpring.h  PhysNode.cpp  PhysNode.h
